--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -31,7 +31,8 @@ jobs:
           unityVersion: 6000.3.4f1
           targetPlatform: StandaloneWindows64
         env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+                UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+                UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
